[package]
name = "tagger"
version = "0.1.0"
authors = ["Niklas <niklas@lindorfer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
semver = "1.0"
git2 = "0.14"
substring = "1.4.5"
regex = "1.5.5" 
console = "0.15.0"
dialoguer = "0.10.0"
strum = "0.24.0"
strum_macros = "0.24.0"