[package]
authors = ["Niklas Lindorfer <niklas@lindorfer.com>"]
edition = "2018"
name = "tagger"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
console = "0.15.0"
dialoguer = "0.10.0"
git2 = "0.14"
lazy-regex = "2.3.0"
regex = "1.5.5"
semver = "1.0"
strum = "0.24.0"
strum_macros = "0.24.0"
substring = "1.4.5"
