[package]
authors = ["Niklas Lindorfer <niklas@lindorfer.com>"]
edition = "2018"
name = "tagger"
version = "0.1.0"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
console = "0.15"
dialoguer = "0.10"
git2 = "0.15"
lazy-regex = "2.3"
regex = "1.7"
semver = "1.0"
strum = "0.24"
strum_macros = "0.24"
substring = "1.4"
